Bench: add c3id benchmark

--- a/src/security_utilities_rust/Cargo.toml
+++ b/src/security_utilities_rust/Cargo.toml
@@ -31,3 +31,7 @@ harness = false
 [[bench]]
 name = "identifiable_scans"
 harness = false
+
+[[bench]]
+name = "cross_company_correlating_id"
+harness = false
