Bench: Add identifiable_secrets benchmark

--- a/src/security_utilities_rust/Cargo.toml
+++ b/src/security_utilities_rust/Cargo.toml
@@ -33,5 +33,10 @@ name = "identifiable_scans"
 harness = false
 
 [[bench]]
+name = "identifiable_secrets"
+harness = false
+
+[[bench]]
 name = "cross_company_correlating_id"
 harness = false
+
